syntax = "proto3";
package raft;

import "google/protobuf/empty.proto";
import "types.proto";

// Service for clients to interact with the replicated key-value store
service RaftClient {
  // Add or update a key-value pair
  rpc Put(PutRequest) returns (PutResponse);

  // Retrieve a value by key
  rpc Get(GetRequest) returns (GetResponse);

  // Retrieve a value by key, also returns when not a leader
  rpc GetDebug(GetRequest) returns (GetResponse);

  // Get the state of a server
  rpc GetServerState(google.protobuf.Empty) returns (ServerStateResponse) {}

  // Get the term of a server
  rpc GetServerTerm(google.protobuf.Empty) returns (ServerTermResponse) {}

  // Get the implementation version of a server
  rpc GetImplementationVersion(google.protobuf.Empty) returns (ImplementationVersionResponse) {}
}

// Request to store or update a key-value pair
message PutRequest {
  string key = 1;

  // Optional: absence implies a delete
  optional string value = 2;
}

// Response for a Put request
message PutResponse {
  // Whether the operation succeeded
  bool success = 1;

  // Optional hint of current leader if request failed
  optional Peer leader_hint = 2;
}

// Request to retrieve a value by key
message GetRequest {
  string key = 1;
}

// Response for a Get request
message GetResponse {
  // Value associated with the key, null if not found
  optional string value = 1;

  // Optional leader hint if this node is not the leader
  optional Peer leader_hint = 2;
}

// Response containing detailed server state
message ServerStateResponse {
  // The ID of the server
  uint32 id = 1;

  // The state of the server
  ServerState state = 2;
}

// Response containing the term of the server
message ServerTermResponse {
  // The ID of the server
  uint32 id = 1;

  // The term of the server
  uint64 term = 2;
}

// Response containing the implementation version of the server
message ImplementationVersionResponse {
  // The ID of the server
  uint32 id = 1;

  // The implementation version of the server
  string implementation = 2;

  // The version of the Raft implementation
  string version = 3;
}
